--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: "Lexend Zetta";
-  src: url("fonts/LexendZetta-VariableFont_wght.ttf") format("truetype-variations");
+  font-family: "Jura";
+  src: url("fonts/Jura-VariableFont_wght.ttf") format("truetype-variations");
   font-weight: 100 900;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Urbanist";
-  src: url("fonts/Urbanist-VariableFont_wght.ttf") format("truetype-variations");
+  font-family: "Genos";
+  src: url("fonts/Genos-VariableFont_wght.ttf") format("truetype-variations");
   font-weight: 100 900;
   font-display: swap;
 }
@@ -20,29 +20,46 @@
 }
 
 body {
-  font-family: "Lexend Zetta", sans-serif;
+  font-family: "Jura", sans-serif;
   font-weight: 200;
-  background-color:#B0BC98;
+  font-size: 1rem;
+  background-color:rgb(106, 112, 97);
+  /* background-color:rgb(173, 179, 162); */
 }
 
 h1 {
-    padding: 2rem;
+  font-family: "Genos", sans-serif;
+  font-size: 3rem;
+  font-weight: 600;
+  color: rgb(32, 33, 32);
+  text-shadow: 0 1px #6c7064;
 }
 
 h2 {
-    padding-bottom: 0;
+  font-size: 1.5rem;
+  padding-bottom: 0;
+  color: rgb(44, 46, 44);
+  text-shadow: 0 1px rgb(32, 33, 32);
+  
 }
 
 h1, h2, footer {
  text-align: center;   
 }
 
-#main-container {
+h3 {
+  margin: 2px;
+  color: rgb(54, 56, 54);
+  text-shadow: 0 1px #B0BC98;
+}
+
+#cards-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
     padding: 2rem;
 }
+
 
 #mode-duration, #mode-payment {
     display: flex;
@@ -52,19 +69,15 @@ h1, h2, footer {
     text-align: center;
     padding: 2rem 6rem 2rem 6rem;
     background-color: #939888;
+    box-shadow: -2px -2px 7px 2px #aab09d, 2px 2px 7px 2px #a1a695;
     font-weight: 300;
     font-size: medium;
-    
     border-radius: 2rem 1rem 3rem 0.5rem;
   }
 
-/* #mode-duration {
-    border-radius: 2rem 0 0 2rem;
-}
-
-#mode-payment {
-    border-radius: 0 2rem 2rem 0;
-} */
+  #mode-duration:hover, #mode-payment:hover, input[type="range"]::-webkit-slider-thumb:hover, .calculate-button:hover {
+    box-shadow: -2px -2px 7px 2px #bcc2ad, 2px 2px 7px 2px #bcc2ad;
+  }
 
 /* STYLES: INPUT TYPE RANGE */
 
@@ -72,10 +85,10 @@ input[type="range"] {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background: black;
+    background: rgb(54, 56, 54);
     outline: none;
     width: 100%;
-    height: 2px;
+    height: 1px;
     cursor: pointer;
 }
 
@@ -91,24 +104,48 @@ input[type="range"] {
 
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  width: 20px;
-  height: 16px;
-  background: green;
+  width: 13px;
+  height: 13px;
+  background: rgb(54, 56, 54);
   border: none;
   border-radius: 50%;
   cursor: pointer;
   /* box-shadow: 0 2px 6px rgba(0,0,0,0.15);
   transition: all 0.2s ease; */
-
-label {
-    font-family: "Urbanist", sans-serif;
-    font-weight: 300;
 }
 
-.label-payment {
+.label-payment, .label-duration {
     font-family: "Outfit", sans-serif;
 }
 
 .calculate-result {
     padding: 2rem;
+}
+
+.calculate-button {
+  all: unset; 
+  background-color: #B0BC98; 
+  color: #000;
+  height: 2rem;
+  padding: 7px 15px;
+  border-radius: 1rem 0.5rem 0.5rem 0.5rem;
+  font-family: inherit;
+  font-size: 1rem;
+  cursor: pointer;
+  display: inline-block;
+  /* border: 2px solid #000; */
+  text-align: center;
+  transition: background 0.3s ease;
+}
+
+.input-result {
+  background-color: #B0BC98;
+  border-radius: 0.5rem 0.5rem 1.5rem 0.5rem;
+  border: none;
+  height: 3rem;
+}
+
+.label-result {
+  font-family: "Outfit", sans-serif;
+  text-shadow: 0 1px #B0BC98;
 }
