Feat: implementation of calc. formula for payment

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h1 {
   font-size: 3rem;
   font-weight: 600;
   color: rgb(32, 33, 32);
-  text-shadow: 0 1px #6c7064;
+  text-shadow: 0 1px #94968d;
 }
 
 h2 {
