--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ h1 {
   /* font-family: "Jura", sans-serif; */
   font-size: 3rem;
   font-weight: 600;
-  color: #787c6e;
-  text-shadow: 0 1px #9da097;
+  color: #979a8e;
+  text-shadow: 0 1px #b1b5ab;
 }
 
 h2 {
@@ -36,7 +36,6 @@ h2 {
   padding-bottom: 0;
   color: rgb(119, 125, 119);
   text-shadow: 0 1px rgb(32, 33, 32);
-  
 }
 
 h1, h2, footer {
@@ -75,6 +74,12 @@ h3 {
   #mode-duration:hover, #mode-payment:hover, input[type="range"]::-webkit-slider-thumb:hover, .calculate-button:hover {
     box-shadow: -2px -2px 7px 2px #bcc2ad, 2px 2px 7px 2px #bcc2ad;
   }
+
+  /* #input-duration-form, #input-payment-form {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  } */
 
 /* STYLES: INPUT TYPE RANGE */
 
@@ -116,7 +121,13 @@ input[type="range"]::-webkit-slider-thumb {
 } */
 
 .calculate-result {
-    padding: 2rem;
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  flex-wrap: wrap;
+  margin: 2rem;
+  gap: 2rem;
 }
 
 .calculate-button {
@@ -125,6 +136,7 @@ input[type="range"]::-webkit-slider-thumb {
                -2px -2px 5px 0 #ccc;
   opacity: 0.5;
   height: 2rem;
+  width: 8ch;
   padding: 7px 15px;
   border-radius: 1rem 0.5rem 0.5rem 0.5rem;
   font-size: 1rem;
@@ -132,15 +144,22 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
   display: inline-block;
   text-align: center;
+  
   /* transition: background 0.3s ease; */
 }
+
+/* .result-group {
+  border: 2px solid red;
+  display: flex;
+  justify-self: end;
+} */
 
 .input-result {
   font-size: 1rem;
   font-weight: 600;
   border-radius: 0.5rem 0.5rem 1.5rem 0.5rem;
   border: none;
-  height: 3rem;
+  height: 1rem;
   padding: 1rem;
   opacity: 0.5;
   box-shadow:  2px 2px 5px 0 #000, 
@@ -159,9 +178,41 @@ input[type="range"]::-webkit-slider-thumb {
   /* background-color: black; */
   text-shadow: 0 1px #838978;
   font-weight: 600;
-  width: 8ch;
 }
 
 .examples-range {
   font-size: 0.8rem;
 }
+
+.credit-link {
+  display: flex;
+  justify-content: end;
+}
+
+a {
+  color: #b1b5ab;
+}
+
+@media screen and (max-width: 1050px) {
+  body {
+    background-image: url(images/rainbow-vortex.svg);
+    background-size: 150% 150%;
+  }
+  #cards-container {
+    grid-template-columns: 1fr;
+  }
+  .card {
+    width: 100%;
+  }
+  .result-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/* @media screen and (min-width: 1051px) and (max-width: 1286px) {
+} */
