--- a/styles.css
+++ b/styles.css
@@ -148,12 +148,6 @@ input[type="range"]::-webkit-slider-thumb {
   /* transition: background 0.3s ease; */
 }
 
-/* .result-group {
-  border: 2px solid red;
-  display: flex;
-  justify-self: end;
-} */
-
 .input-result {
   font-size: 1rem;
   font-weight: 600;
@@ -209,9 +203,10 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 0.5rem;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
   }
+
 }
 
 /* @media screen and (min-width: 1051px) and (max-width: 1286px) {
