--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
   font-size: 1rem;
   background-image: url(images/rainbow-vortex.svg);
   background-size: 100% 100%;
-
   /* background-color: #787c6e; */
 
 }
@@ -183,6 +182,19 @@ input[type="range"]::-webkit-slider-thumb {
   justify-content: end;
 }
 
+
+
+#myChart {
+ width: 50vw !important;
+ height: 300px !important;
+ background-color: rgb(147, 152, 136, 0.6);
+ border-radius: 2rem 1rem 3rem 0.5rem;
+ padding: 1rem;
+ margin: 0 auto;
+ margin-top: 4rem;
+ margin-bottom: 1rem;
+}
+
 a {
   color: #b1b5ab;
 }
@@ -190,7 +202,7 @@ a {
 @media screen and (max-width: 1050px) {
   body {
     background-image: url(images/rainbow-vortex.svg);
-    background-size: 150% 150%;
+    background-size: 150% 105%;
   }
   #cards-container {
     grid-template-columns: 1fr;
